# RocoLib

./: .env  .gitignore  CHANGES.rst  Dockerfile  README.md  api_blueprint.py  application.py  autodetector.py  aws_controller.py  boulder_handler.py  config.py  creds.dev.txt  creds_dev.txt  docker-compose.yaml  firebase_controller.py  forms.py  helpers.py  models.py  pyproject.toml  request_processor.py  requirements.txt  rocolib.json  test-env.bat  ticklist_handler.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-image.yml  python-ci-run-tests.yml
api/: api_request_processor.py  blueprint.py  schemas.py  validation.py
db/: firebase_controller.py  mongodb_controller.py  query_builder.py
docs/: openapi.py  rocolib_api_schema_spec.py
docs/api/: api.md
docs/deployment/: README.md  docker.md
docs/testing/: README.md
language/: en_US.json  es_ES.json  fr_FR.json
legacy/: aws_controller.py
scripts/: add-gym.bat  build-and-push-docker.bat  coverage.bat  delete-gym.bat
scripts/py/: add_gym.py
src/: config.py  generate_open_api_spec.py  models.py  request_processor.py  ticklist_handler.py  typing.py  utils.py
static/: loaderio-154f623e6aaf5309173032e4c39c8118.txt
static/css/: all.css  bootstrap.min.css  custom.css  home.css  tick_list.css  toggle.css
static/js/: circuit_utils.js  problem_utils.js  (+2 more)
templates/: about_us.html  add_new_gym.html  base_template.html  contact.html  create.html  create_boulder.html  create_circuit.html  create_route.html  explore.html  explore_boulders.html  explore_circuits.html  explore_routes.html  home.html  load_boulder.html  load_circuit.html  login_form.html  profile.html  save_boulder.html  save_circuit.html  show_wall.html  signup_form.html  tick_list.html
tests/: __init__.py  db_controller_tests.py  integration_tests.py  tests.py  tests_config.py  utils.py
utils/: add_gym.py  add_new_gym.py  delete_gym.py  generate_open_api_spec.py  img_rotate.py  utils.py
(+32 files in other folders)
