[tool.poetry]
name = "rocolib"
version = "0.1.0"
description = "Simple Web App to create and share boulders & routes for any climbing wall."
authors = ["Juan Gallostra <juangallostra@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.13"
apispec = "^6.8.1"
apispec-webframeworks = "^1.2.0"
astroid = "^3.3.9"
autopep8 = "^2.3.2"
cachecontrol = "^0.14.2"
cachetools = "^5.5.2"
certifi = "^2025.1.31"
cffi = "^1.17.1"
chardet = "^5.2.0"
click = "^8.1.8"
colorama = "^0.4.6"
coverage = "^7.7.1"
dnspython = "^2.7.0"
email-validator = "^2.2.0"
firebase = "^4.0.1"
firebase-admin = "^6.7.0"
flask = "^3.1.0"
flask-caching = "^2.3.1"
flask-cors = "^5.0.1"
flask-httpauth = "^4.8.0"
flask-login = "^0.6.3"
flask-swagger-ui = "^4.11.1"
flask-wtf = "^1.2.2"
google-api-core = "^2.24.2"
google-api-python-client = "^2.165.0"
google-auth = "^2.38.0"
google-auth-httplib2 = "^0.2.0"
google-cloud-core = "^2.4.3"
google-cloud-firestore = "^2.20.1"
google-cloud-storage = "^3.1.0"
google-crc32c = "^1.7.0"
google-resumable-media = "^2.7.2"
googleapis-common-protos = "^1.69.2"
grpcio = "^1.71.0"
gunicorn = "^23.0.0"
httplib2 = "^0.22.0"
idna = "^3.10"
isort = "^6.0.1"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.6"
lazy-object-proxy = "^1.10.0"
markupsafe = "^3.0.2"
marshmallow = "^3.26.1"
mccabe = "^0.7.0"
msgpack = "^1.1.0"
pillow = "^11.1.0"
pyasn1 = "^0.6.1"
pyasn1-modules = "^0.4.1"
pycodestyle = "^2.12.1"
pycparser = "^2.22"
pylint = "^3.3.6"
pymongo = "^4.11.3"
pyparsing = "^3.2.2"
pytz = "^2025.1"
pyyaml = "^6.0.2"
requests = "^2.32.3"
rope = "^1.13.0"
rsa = "^4.9"
six = "^1.17.0"
toml = "^0.10.2"
uritemplate = "^4.1.1"
urllib3 = "^2.3.0"
werkzeug = "^3.1.3"
wrapt = "^1.17.2"
wtforms = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
